kubernetes/ingress/elasticsearch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: elasticsearch-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /elasticsearch(/|$)(.*)
            backend:
              service:
                name: elasticsearch
                port:
                  number: 9200
